--- a/Back-End/back/package.json
+++ b/Back-End/back/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^7.15.1",
     "pg-hstore": "^2.3.3",
