--- a/Back-End/back/.gitignore
+++ b/Back-End/back/.gitignore
@@ -1,5 +1,5 @@
 config/config.json
 node_modules/bcrypt/lib/binding/bcrypt_lib.node
-Back-End/back/node_modules/bcrypt/package.json
-Back-End/back/package-lock.json
-Back-End/back/package.json
+node_modules/bcrypt/package.json
+package-lock.json
+package.json
