--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "FrontEnd",
+  "name": "frontend",
   "version": "1.0.0",
   "description": "My badass Nuxt.js project",
   "author": "SacleuxBenoit",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "PORT=8080 nuxt",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate"
