--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,9 +11,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
     "cross-env": "^5.2.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "nuxt": "^2.11.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
